--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example</title>
+    <title>Index page</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
+
+<input th:onclick="|window.location.href = '@{/login}'|" type="button"
+       value="Login"/>
+
+<br/>
+<br/>
+
+<input th:onclick="|window.location.href = '@{/registration}'|" type="button"
+       value="Register"/>
+
 
 
 </body>
