--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,95 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
+
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
-    <title>User</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../static/style.css" th:href="@{/static/style.css}" type="text/css"/>
+    <title>User Page</title>
 </head>
-<body>
+<body class="bg-light">
+<nav class="navbar navbar-dark bg-dark" style="display: block; color: white">
+    <div class="container-fluid">
+        <span id="myUserDetails" class="navbar-brand ">
+        </span>
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" class="btn btn-link text-white-50" value="Logout"/>
+        </form>
+    </div>
+</nav>
 
-<!--Navbar-->
-<header>
-    <nav class="navbar navbar-dark bg-dark p-0 shadow">
-        <div class="nav-item text-left text-white px-3">
-            <span class="fw-bold " th:text="${user.getEmail()}"></span>
-            <span>with roles:</span>
-            <span th:each="roles : ${user.getRoles()}"
-                  th:text="${#strings.substring(roles.getRole(), 5)} + ' '">
-            </span>
-        </div>
-        <ul class="navbar-nav mr-3">
-            <li class="nav-item text-nowrap">
-                <a class="nav-link px-3" href="/logout">Logout</a>
-            </li>
-        </ul>
+<div class="block-left custom-col-left back-white">
+    <nav class="nav flex-column nav-pills">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/user">User</a>
+        </li>
     </nav>
-</header>
+</div>
 
-<div class="container-fluid mt-3 ">
+<div class="block-right section">
+    <h2>User information-page</h2>
+    <div class="border">
+        <div class="card" style="width: 100%;">
+            <div class="card-body">
+                <h5 class="card-header">About User</h5>
 
-    <!--Sidebar-->
-    <div class="row">
-        <div class="col-md-2 px-0 ">
-            <div class="d-flex flex-column flex-shrink-0 p-0 text-white">
-                <ul class="nav nav-pills flex-column">
-                    <li class="nav-item">
-                        <a href="#userInfo" data-bs-toggle="pill" class="nav-link active no-refresh" role="tab"
-                           aria-current="false">
-                            User
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Role</th>
+                    </tr>
+                    </thead>
+                    <tbody id="tableUser">
 
-        <!--User info-->
-        <div class="col-md-10 bg-light">
-            <div class="tab-content">
-                <div class="tab-pane fade show active" id="userInfo" role="tabpanel">
-                    <div class="container-fluid">
-                        <h2>User Information-page</h2>
-                        <div class="card">
-                            <div class="container-fluid px-0 bg-light border">
-                                <h5 class="card-header">
-                                    About user</h5>
-                            </div>
-
-                            <div class="container-fluid mt-4">
-                                <div class="table-responsive">
-                                    <table class="table table-striped bg-white">
-                                        <thead>
-                                        <tr>
-                                            <th>ID</th>
-                                            <th>Name</th>
-                                            <th>Email</th>
-                                            <th>Role</th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <tr>
-                                            <td th:text="${user.getId()}">Id</td>
-                                            <td th:text="${user.getName()}">Name</td>
-                                            <td th:text="${user.getEmail()}">Email</td>
-                                            <td>
-                                            <span th:each="role : ${user.getRoles()}"
-                                                  th:text="${role.toString()} + ' '"></span>
-                                            </td>
-                                        </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
 </div>
+<script src="/static/user.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 </html>
